<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="10dp"
        >

      <ImageView
          android:id="@+id/login_facebook"
          android:src="@drawable/ic_login_facebook"
          style="@style/main_bottom_login_menu"
          />

      <ImageView
          android:id="@+id/login_twitter"
          android:src="@drawable/ic_login_twitter"
          style="@style/main_bottom_login_menu"
          />

      <ImageView
          android:id="@+id/login_instagram"
          android:layout_marginRight="0dp"
          android:src="@drawable/ic_login_instegram"
          style="@style/main_bottom_login_menu"
          />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="3"
        >

      <TextView
          android:id="@+id/about"
          android:text="@string/about_dr"
          style="@style/main_bottom_menu"
          />

      <TextView
          android:id="@+id/stores"
          android:text="@string/stores"
          style="@style/main_bottom_menu"
          android:visibility="gone"
          />

      <TextView
          android:id="@+id/contracts"
          android:text="@string/contracts"
          style="@style/main_bottom_menu"
          />
    </LinearLayout>
  </LinearLayout>

  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="#e4e4e4"
      />

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="10dp"
      android:layout_marginTop="10dp"
      android:gravity="center"
      android:text="@string/copyright_info"
      android:textColor="#000000"
      android:textSize="12sp"
      />
</LinearLayout>