<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lnMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tr.com.idefix.android.view.fragments.ForgetPasswordFragment"
    >


  <android.support.v7.widget.AppCompatTextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/forget_password"
      android:textColor="#000000"
      android:textSize="22sp"
      android:textStyle="bold"
      />

  <android.support.v7.widget.AppCompatTextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginTop="10dp"
      android:text="@string/email"
      android:textColor="#000000"
      android:textSize="20sp"
      android:textStyle="bold"
      />

  <android.support.v7.widget.AppCompatEditText
      android:id="@+id/txtEmail"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginTop="10dp"
      android:background="@drawable/bg_cities"
      android:padding="10dp"
      android:textSize="20sp"
      android:textStyle="bold"

      />


  <android.support.v7.widget.AppCompatButton
      android:id="@+id/btnPasswordRecovery"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:background="@drawable/bg_login_button"
      android:text="@string/send"
      android:textColor="#fff"
      android:textSize="20sp"
      android:textStyle="bold"
      />

</LinearLayout>
